Update layout, add messaging

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -409,7 +409,7 @@
   document.addEventListener('DOMContentLoaded', doNotAnswer);
 </script>
 
-<div>
+<div id="contact-us-form-wrapper">
   <h3>{{ site.data.[page.lang].settings.contact_page.support_request_form.title }}</h3>
   <form
     id="contact-us-form"
