--- a/_layouts/contact_us.html
+++ b/_layouts/contact_us.html
@@ -47,23 +47,21 @@ common_applications:
     {% include contact_phone.html %}
   {% endif %}
 
-  {% if page.form_submitted_message %}
-    {% assign form_submitted_message = page.form_submitted_message | newline_to_br %}
+  <div class="desktop:grid-col-9">
+    <div class="form-success-wrapper">
+      {% assign form_success_message = page.form_success_message | newline_to_br %}
 
-    {% include alert.html
-    type="success"
-    class="margin-bottom-4"
-    content=form_submitted_message
-    %}
+      {% include alert.html
+      type="success"
+      class="margin-bottom-4"
+      content=form_success_message
+      %}
 
-    <a class="usa-link" href="https://login.gov{{ '/contact/' | locale_url }}">{{ page.submit_help_ticket }}</a>
-  {% endif %}
-
-  {% unless page.form_submitted_message %}
-    <div class="desktop:grid-col-9">
-      {% include contact_form.html common_applications=layout.common_applications %}
+      <a class="usa-link" href="https://login.gov{{ '/contact/' | locale_url }}">{{ page.submit_help_ticket_link_text }}</a>
     </div>
-  {% endunless %}
+
+    {% include contact_form.html common_applications=layout.common_applications %}
+  </div>
 </contact-us-form>
 
 <div class="page-content__section usa-prose">{{ page.partner_content | markdownify }}</div>
