--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -427,7 +427,7 @@
     <input type="hidden" id="external" name="external" value="1" />
     <input type="hidden" name="recordType" id="recordType" value="012t00000004JFu" />
     {% unless site.recaptcha_site_key %}
-    <input type="hidden" name="debugger" value="1" />
+    <input type="hidden" name="debug" value="1" />
     {% endunless %}
 
     <p>
