--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -422,7 +422,8 @@
     <input type="hidden" name="{{ site.contact_form_agency }}" id="{{ site.contact_form_agency }}" value="" data-for="agency" />
     <input type="hidden" name="{{ site.contact_form_integration }}" id="{{ site.contact_form_integration }}" value="" data-for="integration" />
     <input type="hidden" name="retURL" value="https://federalist-17bd62cc-77b7-4687-9c62-39b462ce6fd5.sites.pages.cloud.gov/preview/gsa-tts/identity-site/LG-13880-add-confirmation/contact/?success=true" />
-    <input type="hidden" name="orgid" value="{{ site.contact_form_orgid }}" />
+    <!-- temp override orgid !-->
+    <input type="hidden" name="orgid" value="00DSL000000Z8cS" />
     <input type="hidden" name="status" id="status" value="New" />
     <input type="hidden" id="external" name="external" value="1" />
     <input type="hidden" name="recordType" id="recordType" value="012t00000004JFu" />
