Modify their demo again

--- a/_layouts/contact_us2.html
+++ b/_layouts/contact_us2.html
@@ -63,13 +63,13 @@ common_applications:
     <!-- demo override here !-->
 <form
   id="contact-us-form"
-  action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00D8b0000013mXx"
+  action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00DSL000000Z8cS"
   method="POST"
   onSubmit="submitCaseForm(event); return false;"
   class="usa-form"
 >
 
-<input type=hidden name="orgid" value="00D8b0000013mXx">
+<input type=hidden name="orgid" value="00DSL000000Z8cS">
 <input type=hidden name="retURL" value="http://none.com">
 
 <!--  ----------------------------------------------------------------------  -->
